<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Charge Quietly</string>
    <string name="action_settings">Settings</string>
    <string name="enabled">Enabled</string>
    <string name="enabled_summary">Change volume when plugged in?</string>
    <string name="volumeLevel">Volume Level</string>
    <string name="pref_enabled_default">true</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="pref_startTime_default">21:00</string>
    <string name="pref_endTime_default">7:00</string>
    <string name="pref_volumeLevel_default">0</string>
    <string name="startTime_summary">Change volume after this time</string>
    <string name="endTime_summary">Change volume before this time</string>

</resources>